// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns: should render columns 1`] = `
<div
  className="columns"
>
  <div
    key="0"
  >
    <div />
  </div>
  <div
    key="1"
  >
    <div />
  </div>
</div>
`;

exports[`Columns: should render flexible columns 1`] = `
<div
  className="columns columns_flexible"
>
  <div
    key="0"
  >
    <div />
  </div>
  <div
    key="1"
  >
    <div />
  </div>
</div>
`;

exports[`Columns: should render tight columns 1`] = `
<div
  className="columns columns_tight"
>
  <div
    key="0"
  >
    <div />
  </div>
  <div
    key="1"
  >
    <div />
  </div>
</div>
`;
